# server/api/controllers/babychain/router.js
@@ -11,15 +11,23 @@ export default express
   .Router()
   .post('/register', controller.register)
   .get('/:key', controller.getBaby)
-  .post('/modify',controller.modify)
-  .post('/delete',controller.postdelete)
-  .get('/delete/:key',controller.delete)
-  .post('/uploadImage',controller.uploadImage)
-  .get('/readImage/:key',controller.readImage)
-  .post('/uploadImageToText',controller.uploadImageToText)
-  .post('/readImageToText',controller.readImageToText)
-  .post('/modifyImageToText',controller.modifyImageToText)
-  .post('/deleteImageToText',controller.deleteImageToText)
-  .post('/uploadImageAndValues',controller.uploadImageAndValues)
+  .post('/modify', controller.modify)
+  .post('/delete', controller.postdelete)
+  .get('/delete/:key', controller.delete)
+  .post('/uploadImage', controller.uploadImage)
+  .get('/readImage/:key', controller.readImage)
+  .post('/uploadImageToText', controller.uploadImageToText)
+  .post('/readImageToText', controller.readImageToText)
+  .post('/modifyImageToText', controller.modifyImageToText)
+  .post('/deleteImageToText', controller.deleteImageToText)
+  .post('/uploadImageAndValues', controller.uploadImageAndValues)
+  .post('/readImageAndValues', controller.readImageAndValues)
+  .post('/uploadImageAndValuesForRegistered', controller.uploadImageAndValues)
+  .post('/readImageAndValuesForRegistered', controller.readImageAndValues)
+  .post('/uploadImageAndValuesForMissing', controller.uploadImageAndValues)
+  .post('/readImageAndValuesForMissing', controller.readImageAndValues)
+  .post('/uploadImageAndValuesForProtected', controller.uploadImageAndValues)
+  .post('/readImageAndValuesForProtected', controller.readImageAndValues)
+   
   ;
 
