# server/routes.js
@@ -5,5 +5,5 @@ import babychainRouter from './api/controllers/babychain/router';
 export default function routes(app) {
   app.use('/api/v1/examples', examplesRouter);
   app.use('/api/v1/balance', balanceRouter);
-  app.use('/api/v1/babychain',babychainRouter);
+  app.use('/api/v1/babychain', babychainRouter);
 }
